// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead items should render typeahead items with match 1`] = `
<div
  className="tc-typeahead-container container-open"
>
  <div
    className="typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value="le"
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      className="items-container"
    >
      <div
        className="section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-filter"
              focusable="false"
              title="icon"
            />
            <span
              className="section-header-title"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="item"
              title="le title 1"
            >
              <span
                className="item-title"
              >
                <span>
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                   tit
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                   1
                </span>
              </span>
              <p
                className="item-description"
              >
                <span>
                  description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibi
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                   tempus ardore.
                </span>
              </p>
            </div>
          </li>
          <li
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="item"
              title="title 2 les elephants elementaires ont des aile"
            >
              <span
                className="item-title"
              >
                <span>
                  tit
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                   2 
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                  s e
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                  phants e
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                  mentaires ont des ai
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                </span>
              </span>
              <p
                className="item-description"
              >
                <span>
                  description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-asterisk"
              focusable="false"
              title="icon"
            />
            <span
              className="section-header-title"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="item"
              title="title 3"
            >
              <span
                className="item-title"
              >
                <span>
                  tit
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                   3
                </span>
              </span>
              <p
                className="item-description"
              >
                <span>
                  description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium va
                  <em
                    className="highlight"
                  >
                    le
                  </em>
                  at.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with object items 1`] = `
<div
  className="tc-typeahead-container container-open"
>
  <div
    className="typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      className="items-container"
    >
      <div
        className="section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-filter"
              focusable="false"
              title="icon"
            />
            <span
              className="section-header-title"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="item"
              title="le title 1"
            >
              <span
                className="item-title"
              >
                <span>
                  le title 1
                </span>
              </span>
              <p
                className="item-description"
              >
                <span>
                  description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibile tempus ardore.
                </span>
              </p>
            </div>
          </li>
          <li
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="item"
              title="title 2 les elephants elementaires ont des aile"
            >
              <span
                className="item-title"
              >
                <span>
                  title 2 les elephants elementaires ont des aile
                </span>
              </span>
              <p
                className="item-description"
              >
                <span>
                  description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-asterisk"
              focusable="false"
              title="icon"
            />
            <span
              className="section-header-title"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="item"
              title="title 3"
            >
              <span
                className="item-title"
              >
                <span>
                  title 3
                </span>
              </span>
              <p
                className="item-description"
              >
                <span>
                  description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium valeat.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with string items 1`] = `
<div
  className="tc-typeahead-container container-open"
>
  <div
    className="typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      className="items-container"
    >
      <ul
        className="items"
        role="listbox"
      >
        <li
          id="react-autowhatever-my-search--item-0"
          onMouseDown={undefined}
          role="option"
          style={Object {}}
        >
          <div
            className="item"
            title="category 1"
          >
            <span
              className="item-title"
            >
              <span>
                category 1
              </span>
            </span>
          </div>
        </li>
        <li
          id="react-autowhatever-my-search--item-1"
          onMouseDown={undefined}
          role="option"
          style={Object {}}
        >
          <div
            className="item"
            title="category 2"
          >
            <span
              className="item-title"
            >
              <span>
                category 2
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead without items 1`] = `
<div
  className="tc-typeahead-container"
>
  <div
    className="typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      className="items-container no-result"
    >
      <span
        className="no-result"
      >
        No result.
      </span>
    </div>
  </div>
</div>
`;

exports[`Typeahead position should render search bar on the right 1`] = `
<div
  className="tc-typeahead-container right"
>
  <div
    className="typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      className="items-container"
    />
  </div>
</div>
`;

exports[`Typeahead with toggle should render button 1`] = `
<button
  className="only-icon-cls btn btn-link"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <i
    aria-hidden="true"
    className="fa fa-search"
    focusable="false"
    title={null}
  />
</button>
`;
